# SpectralBTE

./: .gitignore  CMakeLists.txt  LICENSE  README.md  check_diff.py  cmake_tacc.sh  makefile  makefile_cori  makefile_darwin  mk  rdiff.py
CMakeModules/: FindFFTW.cmake
Data/: rho_BKW16.base  slice_BKW16.base
exec/: CMakeLists.txt  MPIWeightGenerator.c  MPIcollisionRoutines.c  MPIcollisionRoutines.h  boltz.c
input/: heatTrans.test.in
input/species/: Ar  Ne
input_examples/: BKW16.in  Shock1p2.in  Shock1p2.mesh  Shock1p2.out  heatTrans.in  heatTrans.long.in  heatTrans.long.mesh  heatTrans.long.out  heatTrans.mesh  heatTrans.output
input_examples/species/: elec
shellscripts/: moduleload.sh  profsetup.sh
src/: CMakeLists.txt  MPIWeightGenerator.c  MPIcollisionRoutines.c  MPIcollisionRoutines.h  aniso_weights.c  aniso_weights.h  boundaryConditions.c  boundaryConditions.h  collisions.c  collisions.h  collisions_cpu.c  collisions_cpu.h  collisions_fast.c  collisions_fast.h  collisions_fft3d_cpu.c  collisions_fft3d_cpu.h  collisions_fft3d_gpu.cu  collisions_fft3d_gpu.h  collisions_gpu.cu  collisions_gpu.h  collisions_support_cpu.c  collisions_support_cpu.h  collisions_support_gpu.cu  collisions_support_gpu.h  conserve.c  conserve.h  constants.h  function_timer.c  function_timer.h  gauss_legendre.c  global.h  initializer.c  initializer.h  initializer_fast.c  initializer_fast.h  input.c  input.h  main.c  main_fast.c  mesh_setup.c  (+21 more)
testSuite/: BKW16.test.out  README.md  bulkV_BKW16.base  bulkV_heatTrans.base  heatTrans.test.in  kintemp_BKW16.base  kintemp_heatTrans.base  rho_heatTrans.base
tests/: CMakeLists.txt  check_diff.py  run_test.sh
tests/BKW16/: CMakeLists.txt  run_test.sh
tests/BKW16/input/: BKW16.test.in
tests/BKW8/: CMakeLists.txt
tests/example_bash/: CMakeLists.txt  input  target  test.sh
tests/example_cpp/: CMakeLists.txt  test.cpp
tests/heat_transport/: CMakeLists.txt  run_test.sh
tests/heat_transport/input/: heat_transport.test.in  heat_transport.test.out
